# condition-control

./: .gitignore  LICENSE  README.md  README.org
.claude/: settings.local.json.tmp.834355.18f1392c9e0e
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-18-web-auth.md  2026-07-19-signed-ota.md
docs/superpowers/specs/: 2026-07-18-web-auth-design.md  2026-07-19-ap-qr-design.md  2026-07-19-captive-portal-design.md  2026-07-19-csrf-hardening-design.md  2026-07-19-provisioning-hardening-design.md  2026-07-19-signed-ota-design.md  2026-07-20-tz-rule-design.md
firmware-stick/: platformio.ini
firmware-stick-rs/: Cargo.toml  partitions.csv  sdkconfig.defaults
firmware-stick-rs/.cargo/: config.toml
firmware-stick-rs/ac-core/: Cargo.toml
firmware-stick-rs/ac-core/.cargo/: config.toml
firmware-stick-rs/ac-core/src/: lib.rs
firmware-stick-rs/ac-core/tests/: auth.rs  captive.rs  core.rs  ota.rs  tz.rs
firmware-stick-rs/src/: index.html  ir.rs  main.rs  net.rs  ui.rs  update.rs  web.rs
firmware-stick/src/: ac_state.cpp  ac_state.h  config.h  electra_off.cpp  electra_off.h  ir_send.cpp  ir_send.h  main.cpp  net.cpp  net.h  secrets.example.h  ui.cpp  ui.h  web.cpp  web.h  web_api.cpp  web_api.h
firmware-stick/test/test_ac_state/: test_main.cpp
firmware-stick/test/test_web_api/: test_main.cpp
tools/protocol-test/: platformio.ini
tools/protocol-test/src/: main.cpp
tools/sign-manifest/: Cargo.toml
tools/sign-manifest/src/: main.rs
tools/sniffer/: platformio.ini
tools/sniffer/src/: main.cpp
