[package]
name = "firmware-stick-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "firmware-stick-rs"
harness = false

[workspace]
members = ["ac-core"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
ac-core = { path = "ac-core" }
anyhow = "1"
log = "0.4"
esp-idf-svc = "0.51"
embedded-graphics = "0.8"
mipidsi = "0.9"

[build-dependencies]
embuild = "0.33"
