[package]
name = "firmware-stick-rs"
version = "0.3.7"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "firmware-stick-rs"
harness = false

[workspace]
members = ["ac-core"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
ac-core = { path = "ac-core" }
anyhow = "1"
log = "0.4"
esp-idf-svc = "0.51"
# Direct dep only to switch on the classic RMT driver (TxRmtDriver) that the
# IR sender uses; the code itself goes through esp_idf_svc::hal.
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }
embedded-graphics = "0.8"
mipidsi = "0.9"
profont = "0.7"

[build-dependencies]
embuild = "0.33"
