[package]
name = "ac-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# opt_size: un-inlines field ops — without it the xtensa linker fails with
# "l32r: literal target out of range" in the huge vartime verify function.
ed25519-compact = { version = "2", default-features = false, features = ["opt_size"] }
qrcodegen = "1.8"
